--- a/app/src/main/res/layout/layout_home_loading.xml
+++ b/app/src/main/res/layout/layout_home_loading.xml
@@ -1,95 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  android:layout_width="match_parent"
-  android:layout_height="wrap_content"
-  android:orientation="vertical">
-
-  <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/_8sdp"
-    android:layout_marginBottom="@dimen/_16sdp"
-    android:layout_marginStart="@dimen/_16sdp"
-    android:layout_marginEnd="@dimen/_16sdp"
-    android:layout_marginLeft="@dimen/_16sdp"
-    android:layout_marginRight="@dimen/_16sdp">
+    android:orientation="vertical">
 
-    <androidx.cardview.widget.CardView
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      app:cardCornerRadius="@dimen/_8sdp"
-      app:cardElevation="@dimen/_4sdp"
-      app:cardPreventCornerOverlap="false"
-      app:cardUseCompatPadding="true">
-
-      <RelativeLayout
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/_8sdp">
+        android:layout_marginStart="@dimen/_16sdp"
+        android:layout_marginLeft="@dimen/_16sdp"
+        android:layout_marginTop="@dimen/_8sdp"
+        android:layout_marginEnd="@dimen/_16sdp"
+        android:layout_marginRight="@dimen/_16sdp"
+        android:layout_marginBottom="@dimen/_8sdp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/_8sdp">
+
+            <View
+                android:id="@+id/iv"
+                android:layout_width="@dimen/_72sdp"
+                android:layout_height="@dimen/_72sdp"
+                android:background="@drawable/shape_background" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_16sdp"
+                android:layout_marginLeft="@dimen/_16sdp"
+                android:layout_toEndOf="@+id/iv"
+                android:layout_toRightOf="@+id/iv"
+                android:orientation="vertical">
+
+                <View
+                    android:layout_width="150dp"
+                    android:layout_height="@dimen/_8sdp"
+                    android:background="@drawable/loading_background" />
+
+                <View
+                    android:layout_width="180dp"
+                    android:layout_height="@dimen/_8sdp"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:background="@drawable/loading_background" />
+
+                <View
+                    android:layout_width="190dp"
+                    android:layout_height="@dimen/_8sdp"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:background="@drawable/loading_background" />
+
+                <View
+                    android:layout_width="240dp"
+                    android:layout_height="@dimen/_8sdp"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:background="@drawable/loading_background" />
+
+                <View
+                    android:layout_width="250dp"
+                    android:layout_height="@dimen/_8sdp"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:background="@drawable/loading_background" />
+
+            </LinearLayout>
+
+        </RelativeLayout>
+
+    </com.google.android.material.card.MaterialCardView>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/_16sdp"
+        android:layout_marginBottom="@dimen/_8sdp"
+        android:orientation="horizontal">
+
+        <include layout="@layout/layout_home_loading_item_2" />
 
         <View
-          android:id="@+id/iv"
-          android:layout_width="@dimen/_72sdp"
-          android:layout_height="@dimen/_72sdp"
-          android:background="@drawable/shape_background"/>
+            android:layout_width="@dimen/_8sdp"
+            android:layout_height="0dp" />
 
-        <LinearLayout
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:layout_marginStart="@dimen/_16sdp"
-          android:layout_marginLeft="@dimen/_16sdp"
-          android:layout_toEndOf="@+id/iv"
-          android:layout_toRightOf="@+id/iv"
-          android:orientation="vertical">
+        <include layout="@layout/layout_home_loading_item_2" />
 
-          <View
-            android:layout_width="150dp"
-            android:layout_height="@dimen/_8sdp"
-            android:background="@drawable/loading_background"/>
+    </LinearLayout>
 
-          <View
-            android:layout_width="180dp"
-            android:layout_height="@dimen/_8sdp"
-            android:layout_marginTop="@dimen/_8sdp"
-            android:background="@drawable/loading_background"/>
+    <include layout="@layout/layout_home_loading_item" />
 
-          <View
-            android:layout_width="190dp"
-            android:layout_height="@dimen/_8sdp"
-            android:layout_marginTop="@dimen/_8sdp"
-            android:background="@drawable/loading_background"/>
+    <View
+        android:layout_width="0dp"
+        android:layout_height="@dimen/_8sdp" />
 
-          <View
-            android:layout_width="240dp"
-            android:layout_height="@dimen/_8sdp"
-            android:layout_marginTop="@dimen/_8sdp"
-            android:background="@drawable/loading_background"/>
+    <include layout="@layout/layout_home_loading_item" />
 
-          <View
-            android:layout_width="250dp"
-            android:layout_height="@dimen/_8sdp"
-            android:layout_marginTop="@dimen/_8sdp"
-            android:background="@drawable/loading_background"/>
+    <View
+        android:layout_width="0dp"
+        android:layout_height="@dimen/_8sdp" />
 
-        </LinearLayout>
+    <include layout="@layout/layout_home_loading_item" />
 
-      </RelativeLayout>
+    <View
+        android:layout_width="0dp"
+        android:layout_height="@dimen/_8sdp" />
 
-    </androidx.cardview.widget.CardView>
+    <include layout="@layout/layout_home_loading_item" />
 
-  </LinearLayout>
+    <View
+        android:layout_width="0dp"
+        android:layout_height="@dimen/_8sdp" />
 
-  <include layout="@layout/layout_home_loading_item" />
+    <include layout="@layout/layout_home_loading_item" />
 
-  <include layout="@layout/layout_home_loading_item" />
+    <View
+        android:layout_width="0dp"
+        android:layout_height="@dimen/_8sdp" />
 
-  <include layout="@layout/layout_home_loading_item" />
-
-  <include layout="@layout/layout_home_loading_item" />
-
-  <include layout="@layout/layout_home_loading_item" />
-
-  <include layout="@layout/layout_home_loading_item" />
+    <include layout="@layout/layout_home_loading_item" />
 
 </LinearLayout>
