--- a/app/src/main/res/layout/layout_profile_item.xml
+++ b/app/src/main/res/layout/layout_profile_item.xml
@@ -1,82 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools"
-  android:layout_width="match_parent"
-  android:layout_height="wrap_content"
-  android:layout_marginStart="@dimen/_16sdp"
-  android:layout_marginEnd="@dimen/_16sdp"
-  android:layout_marginLeft="@dimen/_16sdp"
-  android:layout_marginRight="@dimen/_16sdp"
-  android:orientation="vertical">
-
-  <androidx.cardview.widget.CardView
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="@dimen/_8sdp"
-    app:cardElevation="@dimen/_4sdp"
-    app:cardPreventCornerOverlap="false"
-    app:cardUseCompatPadding="true">
+    android:layout_marginStart="@dimen/_16sdp"
+    android:layout_marginLeft="@dimen/_16sdp"
+    android:layout_marginEnd="@dimen/_16sdp"
+    android:layout_marginRight="@dimen/_16sdp">
 
     <RelativeLayout
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:padding="@dimen/_8sdp">
-
-      <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/profile_iv"
-        android:layout_width="@dimen/_72sdp"
-        android:layout_height="@dimen/_72sdp"
-        tools:src="@mipmap/ic_launcher"/>
-
-      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_16sdp"
-        android:layout_marginLeft="@dimen/_16sdp"
-        android:layout_toEndOf="@+id/profile_iv"
-        android:layout_toRightOf="@+id/profile_iv"
-        android:orientation="vertical">
+        android:padding="@dimen/_8sdp">
 
-        <TextView
-          android:id="@+id/profile_name_tv"
-          style="@style/Text.Body"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:textSize="@dimen/_14ssp"
-          tools:text="Wisnu Kurniawan"/>
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile_iv"
+            android:layout_width="@dimen/_72sdp"
+            android:layout_height="@dimen/_72sdp"
+            tools:src="@mipmap/ic_launcher" />
 
-        <TextView
-          android:id="@+id/profile_location_tv"
-          style="@style/Text.Body"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginTop="@dimen/_2sdp"
-          android:textSize="@dimen/_14ssp"
-          tools:text="Yogyakarta, Indonesia"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_16sdp"
+            android:layout_marginLeft="@dimen/_16sdp"
+            android:layout_toEndOf="@+id/profile_iv"
+            android:layout_toRightOf="@+id/profile_iv"
+            android:orientation="vertical">
 
-        <TextView
-          android:id="@+id/profile_bio_tv"
-          style="@style/Text.Body"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginTop="@dimen/_2sdp"
-          android:textSize="@dimen/_14ssp"
-          tools:text="Passionate in mobile development"/>
+            <TextView
+                android:id="@+id/profile_name_tv"
+                style="@style/Text.Body"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/_14ssp"
+                tools:text="Wisnu Kurniawan" />
 
-        <TextView
-          android:id="@+id/profile_blog_tv"
-          style="@style/Text.Body"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginTop="@dimen/_2sdp"
-          android:textSize="@dimen/_14ssp"
-          tools:text="https://medium.com/@wisnukurniawan"/>
+            <TextView
+                android:id="@+id/profile_location_tv"
+                style="@style/Text.Body"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_2sdp"
+                android:textSize="@dimen/_14ssp"
+                tools:text="Yogyakarta, Indonesia" />
 
-      </LinearLayout>
+            <TextView
+                android:id="@+id/profile_bio_tv"
+                style="@style/Text.Body"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_2sdp"
+                android:textSize="@dimen/_14ssp"
+                tools:text="Passionate in mobile development" />
+
+            <TextView
+                android:id="@+id/profile_blog_tv"
+                style="@style/Text.Body"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_2sdp"
+                android:textSize="@dimen/_14ssp"
+                tools:text="https://medium.com/@wisnukurniawan" />
+
+        </LinearLayout>
 
     </RelativeLayout>
 
-  </androidx.cardview.widget.CardView>
-
-</LinearLayout>
+</com.google.android.material.card.MaterialCardView>
