--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="greyE8">#e8e8e8</color>
+    <color name="whiteF5">#F5F5F5</color>
 </resources>
