--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+
+  <dimen name="trending_item_width">240dp</dimen>
+  <dimen name="trending_item_height">120dp</dimen>
+
   <dimen name="_1sdp">1.00dp</dimen>
   <dimen name="_2sdp">2.00dp</dimen>
   <dimen name="_3sdp">3.00dp</dimen>
