--- a/app/src/main/res/layout/layout_home_loading_item_2.xml
+++ b/app/src/main/res/layout/layout_home_loading_item_2.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="240dp"
-    android:layout_height="120dp"
+    android:layout_width="@dimen/trending_item_width"
+    android:layout_height="@dimen/trending_item_height"
     android:layout_marginTop="@dimen/_2sdp"
     android:layout_marginBottom="@dimen/_2sdp"
     android:layout_marginLeft="@dimen/_2sdp"
