--- a/app/src/main/res/layout/layout_trending_project_wrapper.xml
+++ b/app/src/main/res/layout/layout_trending_project_wrapper.xml
@@ -1,23 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.wisnu.epoxyexample.feature.home.ui.view.TrendingProjectWrapperView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="@dimen/_16sdp"
-    android:layout_marginEnd="@dimen/_16sdp"
     android:layout_marginLeft="@dimen/_16sdp"
+    android:layout_marginEnd="@dimen/_16sdp"
     android:layout_marginRight="@dimen/_16sdp"
     android:orientation="vertical">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="@dimen/_8sdp"
-        app:cardElevation="@dimen/_4sdp"
-        app:cardPreventCornerOverlap="false"
-        app:cardUseCompatPadding="true">
+        android:orientation="vertical"
+        android:paddingTop="@dimen/_8sdp"
+        android:paddingBottom="@dimen/_16sdp">
 
-    </androidx.cardview.widget.CardView>
+        <TextView
+            android:id="@+id/project_name_tv"
+            style="@style/Text.Header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_16sdp"
+            android:layout_marginLeft="@dimen/_16sdp"
+            android:layout_marginBottom="@dimen/_8sdp"
+            android:text="Trending"
+            android:textSize="@dimen/_14ssp" />
 
-</com.wisnu.epoxyexample.feature.home.ui.view.TrendingProjectWrapperView>
+        <com.airbnb.epoxy.EpoxyRecyclerView
+            android:id="@+id/project_carousel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+</com.google.android.material.card.MaterialCardView>
