--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -12,6 +12,7 @@
     layout="@layout/layout_home_loading"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+      android:visibility="gone"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
   <com.airbnb.epoxy.EpoxyRecyclerView
