--- a/app/src/main/res/layout/layout_project_item_loading.xml
+++ b/app/src/main/res/layout/layout_project_item_loading.xml
@@ -1,45 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="@dimen/trending_item_width"
-    android:layout_height="@dimen/trending_item_height"
-    android:layout_marginTop="@dimen/_2sdp"
-    android:layout_marginBottom="@dimen/_2sdp"
-    android:layout_marginLeft="@dimen/_2sdp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="@dimen/_16sdp">
+        android:orientation="vertical">
 
         <View
-            android:id="@+id/v1"
             android:layout_width="50dp"
             android:layout_height="@dimen/_8sdp"
+            android:layout_marginStart="@dimen/_16sdp"
+            android:layout_marginLeft="@dimen/_16sdp"
+            android:layout_marginTop="@dimen/_8sdp"
             android:layout_marginBottom="@dimen/_8sdp"
             android:background="@drawable/loading_background" />
 
         <View
-            android:id="@+id/v2"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_8sdp"
-            android:layout_below="@+id/v1"
+            android:layout_marginLeft="@dimen/_16sdp"
+            android:layout_marginRight="@dimen/_16sdp"
             android:layout_marginBottom="@dimen/_8sdp"
             android:background="@drawable/loading_background" />
 
         <View
-            android:id="@+id/v3"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_8sdp"
-            android:layout_below="@+id/v2"
+            android:layout_marginLeft="@dimen/_16sdp"
+            android:layout_marginRight="@dimen/_80sdp"
             android:layout_marginBottom="@dimen/_16sdp"
             android:background="@drawable/loading_background" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="@dimen/_16sdp"
+            android:layout_marginRight="@dimen/_16sdp"
+            android:layout_marginBottom="@dimen/_16sdp"
             android:gravity="end"
             android:orientation="horizontal">
 
@@ -57,6 +57,6 @@
 
         </LinearLayout>
 
-    </RelativeLayout>
+    </LinearLayout>
 
 </com.google.android.material.card.MaterialCardView>
