--- a/app/src/main/res/layout/layout_project_loading.xml
+++ b/app/src/main/res/layout/layout_project_loading.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <View
         android:layout_width="60dp"
@@ -11,19 +11,36 @@
         android:layout_marginBottom="@dimen/_22sdp"
         android:background="@drawable/loading_background" />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+    <include layout="@layout/layout_project_item_loading" />
 
-        <include layout="@layout/layout_project_item_loading" />
+    <View
+        android:layout_width="0dp"
+        android:layout_height="@dimen/_8sdp" />
 
-        <View
-            android:layout_width="@dimen/_8sdp"
-            android:layout_height="0dp" />
+    <include layout="@layout/layout_project_item_loading" />
 
-        <include layout="@layout/layout_project_item_loading" />
+    <View
+        android:layout_width="0dp"
+        android:layout_height="@dimen/_8sdp" />
 
-    </LinearLayout>
+    <include layout="@layout/layout_project_item_loading" />
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="@dimen/_8sdp" />
+
+    <include layout="@layout/layout_project_item_loading" />
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="@dimen/_8sdp" />
+
+    <include layout="@layout/layout_project_item_loading" />
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="@dimen/_8sdp" />
+
+    <include layout="@layout/layout_project_item_loading" />
 
 </LinearLayout>
